--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -13,8 +13,8 @@
 <section class="content">
     <div class="boxed">
         <article class="article-space">
-            <p class="title-display">Learn what earns today</p>
-            <p class="title-sub v-space20 weight-light">A platform that helps you learn on-demand skills that you can immediately earn it.</p>
+            <p class="title-display">Learn what <i class="green-text">earns</i> today</p>
+            <p class="title-sub v-space40 weight-light">A platform that helps you learn on-demand skills that you can immediately earn it.</p>
         </article>
     </div>
 </section>
