--- a/web/templates/signup.html
+++ b/web/templates/signup.html
@@ -9,9 +9,9 @@
 {% block content %}
 <section class="content">
     <div class="boxed">
-        <article class="article-space article-box">
+        <article class="article-box">
             <p class="title-display">Learn what earns today.</p>
-            <p class="title-sub v-space20 weight-light">Learn in-demand and up-to-date skills that you can monetize straight away. &nbsp; At your own pace, and your own convenience.</p>
+            <p class="title-sub v-space40 weight-light">Learn in-demand and up-to-date skills that you can monetize straight away. &nbsp; At your own pace, and your own convenience.</p>
         </article>
         <form class="signup-form" method="POST">
             <h2 class="form-title">Sign Up</h2> <br>
