--- a/web/templates/signup.html
+++ b/web/templates/signup.html
@@ -1,34 +1,76 @@
-{% extends 'base.html' %}
-{% block title %} Sign up {% endblock %}
-{% block signuplink %}
-<a class="cta-btn cta-medium" href="{{ url_for('auth.login') }}">Log In</a>
-{% endblock %}
-{% block navsearch %}
-<input class="field search" type="search" name="search" id="search" placeholder="Search">
-{% endblock %}
-{% block content %}
+{% extends 'base.html' %} {% block title %} Sign up {% endblock %} {% block
+signuplink %}
+<li><a class="cta-link" href="{{ url_for('auth.login') }}">Log in</a></li>
+<li><a class="cta-link" href="{{ url_for('auth.signup') }}">Explore</a></li>
+
+{% endblock %} {% block navsearch %}
+<input
+  class="field search"
+  type="search"
+  name="search"
+  id="search"
+  placeholder="Search"
+/>
+{% endblock %} {% block content %}
 <section class="content">
-    <div class="boxed">
-        <article class="article-box">
-            <p class="title-display">Learn what earns today.</p>
-            <p class="title-sub v-space40 weight-light">Learn in-demand and up-to-date skills that you can monetize straight away. &nbsp; At your own pace, and your own convenience.</p>
-        </article>
-        <form class="signup-form" method="POST">
-            <h2 class="form-title">Sign Up</h2> <br>
-            <input class="field" type="text" name="firstname" placeholder="First Name" required> <br><br>
-            <input class="field" type="text" name="lastname" placeholder="Last Name" required> <br><br>
-            <input class="field" type="email" name="email" placeholder="Email" required> <br><br>
-            <input class="field" type="password" name="password" placeholder="Password" required> <br><br>
-            <input class="btn-action btn-secondary" type="submit" value="Continue"><br><br>
-            <a class="inline-link" href="{{ url_for('auth.login') }}">Already have an account?</a>
-        </form>
-    </div>
+  <div class="boxed">
+    <article class="article-box">
+      <p class="title-display">Aquire new skills today and begin earning</p>
+      <p class="title-sub v-space40 weight-light">
+        Learn in-demand and up-to-date skills that you can monetize straight
+        away. &nbsp; At your own pace, and your own convenience.
+      </p>
+    </article>
+    <form class="signup-form" method="POST">
+      <h2 class="form-title">Sign Up</h2>
+      <br />
+      <input
+        class="field"
+        type="text"
+        name="firstname"
+        placeholder="First Name"
+        required
+      />
+      <br /><br />
+      <input
+        class="field"
+        type="text"
+        name="lastname"
+        placeholder="Last Name"
+        required
+      />
+      <br /><br />
+      <input
+        class="field"
+        type="email"
+        name="email"
+        placeholder="Email"
+        required
+      />
+      <br /><br />
+      <input
+        class="field"
+        type="password"
+        name="password"
+        placeholder="Password"
+        required
+      />
+      <br /><br />
+      <input
+        class="btn-action btn-secondary"
+        type="submit"
+        value="Continue"
+      /><br /><br />
+      <a class="inline-link" href="{{ url_for('auth.login') }}"
+        >Already have an account?</a
+      >
+    </form>
+  </div>
 </section>
-{% endblock %}
-{% block footer %}
+{% endblock %} {% block footer %}
 <footer>
-    <div id="footer-navs">
-        <span>&copy; Project Star Technologies</span>
-    </div>   
+  <div id="footer-navs">
+    <span>&copy; Project Star Technologies</span>
+  </div>
 </footer>
 {% endblock %}
