--- a/web/templates/under_construction.html
+++ b/web/templates/under_construction.html
@@ -22,17 +22,17 @@
 
       <h1 class="big-message">
         Thank you for visiting. Our developers are working hard to give you a
-        world-class platform. Kindly join our waiting list
+        world-class platform. Kindly join our waiting list.
       </h1>
       <p>
         <a class="cta-btn" href="https://forms.gle/6rCWGo5zyYEgWUBBA"
           >Join our waiting list</a
         >
       </p>
-    </section>
 
-    <p class="copyright">
-      <span>&copy; Project Star Technologies</span>
-    </p>
+      <p>
+        <span class="copyright">&copy; Project Star Technologies</span>
+      </p>
+    </section>
   </body>
 </html>
