--- a/web/templates/under_construction.html
+++ b/web/templates/under_construction.html
@@ -21,11 +21,14 @@
       </p>
 
       <h1 class="big-message">
-        Thank you for visiting. Our developers are working hard to give you a
+        Thank you for visiting. Our engineers are working hard to give you a
         world-class platform. Kindly join our waiting list.
       </h1>
       <p>
-        <a class="cta-btn" href="https://forms.gle/6rCWGo5zyYEgWUBBA"
+        <a
+          class="cta-btn"
+          target="_blank"
+          href="https://forms.gle/6rCWGo5zyYEgWUBBA"
           >Join our waiting list</a
         >
       </p>
