--- a/web/templates/admin/login.html
+++ b/web/templates/admin/login.html
@@ -27,10 +27,10 @@
           <h2 class="form-title">Log in to Instructor Area </h2>
         </p>
         <p>
-          <input type="email" placeholder="Email" class="field" />
+          <input name="email" type="email" placeholder="Email" class="field" />
         </p>
         <p>
-          <input type="password" placeholder="Password" class="field" />
+          <input name="password" type="password" placeholder="Password" class="field" />
         </p>
         <p>
           <input type="submit" value="Continue" class="field cta-btn" />
