--- a/web/templates/under_construction.html
+++ b/web/templates/under_construction.html
@@ -20,10 +20,12 @@
         />
       </p>
 
-      <h1 class="big-message">
-        Thank you for visiting. Our engineers are working hard to give you a
-        world-class platform. Kindly join our waiting list.
-      </h1>
+      <h1 class="big-message">A Pay-As-You-Go learning platform.</h1>
+      <p class="small-message">
+        Learn while paying flexibly the world's first flexible-pay online
+        learning platform. Projectstar is a stem learning platform for students,
+        professionals, and budding tech-preneurs.
+      </p>
       <p>
         <a
           class="cta-btn"
