--- a/web/static/construction.css
+++ b/web/static/construction.css
@@ -3,6 +3,7 @@
 html{
     height: 100%;
     font-family: "PT Sans";
+    scrollbar-width: 0;
 }
 
 body{
@@ -27,35 +28,86 @@ p{
 }
 
 .logo{
-    margin-top: 15vh;
+    margin-top: 12vh;
     height: 4em;
     margin-bottom: 5vh;
 }
 
 .big-message{
-    font-size: 2em;
+    font-size: 3em;
     text-align: center;
     color: #fff;
+    font-weight: 700;
+}
+
+.small-message{
+    font-size: 1.5em;
+    color: #fff;
+    text-align: center;
     margin-bottom: 15vh;
-    font-weight: 400;
+    hyphens: none;
 }
 
 .cta-btn{
     text-decoration: none;
     color: #0847B7;
     background-color: #fff;
-    padding: 1em 2em;
-    font-size: 1.5em;
+    padding: .8em 2em;
+    font-size: 1.2em;
     border-radius: 2em;
-    font-weight: 400;
+    font-weight: 700;
 }
 
 .copyright{
     display: none;
-    margin: 25vh auto;
+    margin: 15vh auto;
     color: #fff;
     font-size: 1em;
 
+}
+
+@media screen and (min-width: 1024px) {
+    .logo {
+        margin-top: 5vh;
+    }
+
+    .small-message {
+        font-size: 1.2em;
+    }
+}
+
+@media screen and (min-height: 750px){
+
+    .logo{
+        margin-top: 7vh;
+    }
+
+    .copyright{
+        display: inline-block;
+    }
+
+    .big-message {
+        font-size: 5em;
+    }
+}
+
+@media screen and (width: 540px) {
+    .logo {
+        margin-top: 7vh;
+    }
+
+    .big-message {
+        font-size: 3em;
+    }
+
+    .small-message {
+        font-size: .8em;
+    }
+
+    .cta-btn {
+        padding: .8em 1.8em;
+        font-size: 1.2em;
+    }
 }
 
 
@@ -66,38 +118,40 @@ p{
     }
 
     .logo {
-        margin-top: 15vh;
+        margin-top: 7vh;
         height: 3em;
     }
 
     .big-message{
-        font-size: 1.3em;
-        margin-bottom: 10vh;
+        font-size: 3em;
+    }
+
+    .small-message{
+        font-size: 1em;
     }
 
     .cta-btn{
-        padding: 1em 2em;
+        padding: .8em 1.8em;
         font-size: 1.2em;
+        margin-bottom: 5vh;
     }
 }
 
-@media screen and (width: 540px) {
-    .logo{
-        margin-top: 10vh;
+@media screen and (max-width: 300px) {
+    .logo {
+        height: 2.2em;
+    }
+
+    /* .big-message {
+        font-size: 2em;
+    } */
+
+    .cta-btn {
+        padding: .7em 1.7em;
+        font-size: 1em;
     }
 }
 
-@media screen and (min-height: 800px){
-    .copyright{
-        display: inline-block;
-    }
-}
-
-@media screen and (min-width: 1280px) {
-    .copyright {
-        margin: 20vh auto;
-    }
-}
 /* .cta-btn:hover{
     background-color: #08b768;
     color: #fff;
