--- a/web/static/construction.css
+++ b/web/static/construction.css
@@ -16,6 +16,7 @@ body{
     padding: 0;
     box-sizing: border-box;
     background-position: center;
+    background-attachment: fixed;
 }
 
 .content{
@@ -34,18 +35,20 @@ p{
 }
 
 .big-message{
-    font-size: 3em;
+    font-size: 4em;
     text-align: center;
     color: #fff;
     font-weight: 700;
+    line-height: 1em;
 }
 
 .small-message{
     font-size: 1.5em;
     color: #fff;
     text-align: center;
-    margin-bottom: 15vh;
+    margin-bottom: 8vh;
     hyphens: none;
+    line-height: 1.5em;
 }
 
 .cta-btn{
@@ -66,6 +69,13 @@ p{
 
 }
 
+
+/* @media screen and (min-width: 1280px) {
+    .small-message{
+        font-size: 2em;
+    }
+} */
+
 @media screen and (min-width: 1024px) {
     .logo {
         margin-top: 5vh;
@@ -73,6 +83,7 @@ p{
 
     .small-message {
         font-size: 1.2em;
+        margin-bottom: 25vh;
     }
 }
 
@@ -87,7 +98,11 @@ p{
     }
 
     .big-message {
-        font-size: 5em;
+        font-size: 6em;
+    }
+
+    .small-message{
+        margin-bottom: 20vh;
     }
 }
 
@@ -108,6 +123,7 @@ p{
         padding: .8em 1.8em;
         font-size: 1.2em;
     }
+
 }
 
 
@@ -123,11 +139,12 @@ p{
     }
 
     .big-message{
-        font-size: 3em;
+        font-size: 4.2em;
     }
 
     .small-message{
         font-size: 1em;
+        margin-bottom: 25vh;
     }
 
     .cta-btn{
@@ -137,14 +154,19 @@ p{
     }
 }
 
-@media screen and (max-width: 300px) {
+@media screen and (max-width: 400px) {
     .logo {
         height: 2.2em;
     }
 
-    /* .big-message {
-        font-size: 2em;
-    } */
+    .big-message{
+        font-size: 3.5em;
+    }
+
+    .small-message{
+        font-size: .8em;
+        margin-bottom: 10vh;
+    }
 
     .cta-btn {
         padding: .7em 1.7em;
@@ -152,8 +174,5 @@ p{
     }
 }
 
-/* .cta-btn:hover{
-    background-color: #08b768;
-    color: #fff;
-} */
+
 
